--- a/MidiMaps/index.html
+++ b/MidiMaps/index.html
@@ -41,12 +41,14 @@ background-size: cover;
         <div class="sidebar-brand-icon rotate-n-15">
           <!-- <i class="fas fa-tachometer-alt"></i> -->
           <i class="fas fa-map"></i>
+          <img src="img/midimapBanner.png" id="x">
         </div>
         <div class="sidebar-brand-text mx-3"><sup>Midi</sup>|Maps</div>
       </a>
 
       <!-- Divider -->
       <hr class="sidebar-divider my-0">
+
 
       <!-- Nav Item - Dashboard -->
       <li class="nav-item active">
